--- a/src/components/styles/Tabs.module.scss
+++ b/src/components/styles/Tabs.module.scss
@@ -1,11 +1,12 @@
 .tabs-container {
-    @apply flex;
+    @apply flex flex-col md:flex-row;
     justify-content: flex-start;
     width: 100%;
+    position: relative;
 }
 
 .tab-button {
-    @apply px-6 py-3 me-1 rounded-md rounded-b-none focus:outline-none shadow-xl;
+    @apply px-4 py-2 me-1 focus:outline-none w-48;
 
     &.active {
         @apply text-white bg-panel border-panel;
@@ -13,5 +14,29 @@
 
     &:not(.active) {
         @apply text-gray-700 border-transparent bg-tab-inactive;
+    }
+
+    @apply rounded-t-md;
+}
+
+.dropdown-toggle {
+    @apply px-5 py-3 me-1 focus:outline-none bg-tab-inactive text-gray-700 flex items-center justify-between w-48;
+
+    &.active {
+        @apply text-white bg-panel rounded-t-md;
+    }
+}
+
+.dropdown-menu {
+    @apply flex flex-col mt-0 absolute z-10 w-48 border-t border-gray-300;
+
+    background: none;
+
+    & > button {
+        @apply text-left px-5 py-3 w-full border-b border-gray-300 rounded-none;
+
+        &:last-of-type {
+            @apply rounded-b-md border-b-0;
+        }
     }
 }
